--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "husky": "^7.0.4",
+    "jest": "^27.4.4",
     "lint-staged": "^12.1.2",
     "standard": "^16.0.4"
+  },
+  "dependencies": {
+    "yarn": "^1.22.17"
   }
 }
