--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "standard": "^16.0.4"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^6.1.1",
     "yarn": "^1.22.17"
   }
 }
